tests/rosetta/out/C/bioinformatics-global-alignment.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:52Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:52Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
const char *padLeft(char *s, int w) {
  const char *res = "";
  int n = w - strlen(s);
  while (n > 0) {
    char *tmp1 = concat_string(res, " ");
    res = tmp1;
    n = n - 1;
  }
  char *tmp2 = concat_string(res, s);
  return tmp2;
}

int indexOfFrom(char *s, char *ch, int start) {
  int i = start;
  while (i < strlen(s)) {
    if (slice_string(s, i, i + 1) == ch) {
      return i;
    }
    i = i + 1;
  }
  return (-1);
}

int containsStr(char *s, char *sub) {
  int i = 0;
  int sl = strlen(s);
  int subl = strlen(sub);
  while (i <= sl - subl) {
    if (slice_string(s, i, i + subl) == sub) {
      return 1;
    }
    i = i + 1;
  }
  return 0;
}

int distinct(list_string slist) {
  list_string tmp3 = {0, NULL};
  int res = tmp3;
  for (int tmp4 = 0; tmp4 < slist.len; tmp4++) {
    char *s = slist.data[tmp4];
    int found = 0;
    for (int tmp5 = 0; tmp5 < res.len; tmp5++) {
      char *r = res.data[tmp5];
      if ((strcmp(r, s) == 0)) {
        found = 1;
        break;
      }
    }
    if ((!found)) {
      list_string tmp6 = list_string_create(1);
      tmp6.data[0] = s;
      list_string tmp7 = concat_list_string(res, tmp6);
      res = tmp7;
    }
  }
  return res;
}

list_int permutations(list_string xs) {
  if (xs.len <= 1) {
    list_int tmp8 = list_int_create(1);
    tmp8.data[0] = xs;
    return tmp8;
  }
  list_int tmp9 = list_int_create(0);
  list_int res = tmp9;
  int i = 0;
  while (i < xs.len) {
    list_string tmp10 = {0, NULL};
    int rest = tmp10;
    int j = 0;
    while (j < xs.len) {
      if (j != i) {
        list_string tmp11 = list_string_create(1);
        tmp11.data[0] = xs.data[j];
        list_string tmp12 = concat_list_string(rest, tmp11);
        rest = tmp12;
      }
      j = j + 1;
    }
    list_int subs = permutations(rest);
    for (int tmp13 = 0; tmp13 < subs.len; tmp13++) {
      int p = subs.data[tmp13];
      list_string perm = list_string_create(1);
      perm.data[0] = xs.data[i];
      int perm = perm;
      int k = 0;
      while (k < p.len) {
        list_string tmp14 = list_string_create(1);
        tmp14.data[0] = p.data[k];
        list_string tmp15 = concat_list_string(perm, tmp14);
        perm = tmp15;
        k = k + 1;
      }
      res = 0;
    }
    i = i + 1;
  }
  return res;
}

int headTailOverlap(char *s1, char *s2) {
  int start = 0;
  while (1) {
    char *tmp16 = slice_string(s2, 0, 1);
    int ix = indexOfFrom(s1, tmp16, start);
    if (ix == 0 - 1) {
      return 0;
    }
    start = ix;
    if (slice_string(s2, 0, strlen(s1) - start) ==
        slice_string(s1, start, strlen(s1))) {
      return strlen(s1) - start;
    }
    start = start + 1;
  }
}

int deduplicate(list_string slist) {
  list_int arr = distinct(slist);
  list_string tmp17 = {0, NULL};
  int filtered = tmp17;
  int i = 0;
  while (i < arr.len) {
    int s1 = arr.data[i];
    int within = 0;
    int j = 0;
    while (j < arr.len) {
      if (j != i && containsStr(arr.data[j], s1)) {
        within = 1;
        break;
      }
      j = j + 1;
    }
    if ((!within)) {
      list_string tmp18 = list_string_create(1);
      tmp18.data[0] = s1;
      list_string tmp19 = concat_list_string(filtered, tmp18);
      filtered = tmp19;
    }
    i = i + 1;
  }
  return filtered;
}

const char *joinAll(list_string ss) {
  const char *out = "";
  for (int tmp20 = 0; tmp20 < ss.len; tmp20++) {
    char *s = ss.data[tmp20];
    char *tmp21 = concat_string(out, s);
    out = tmp21;
  }
  return out;
}

const char *shortestCommonSuperstring(list_string slist) {
  int ss = deduplicate(slist);
  const char *shortest = joinAll(ss);
  list_int perms = permutations(ss);
  int idx = 0;
  while (idx < perms.len) {
    int perm = perms.data[idx];
    const char *sup = perm.data[0];
    int i = 0;
    while (i < ss.len - 1) {
      int ov = headTailOverlap(perm.data[i], perm.data[i + 1]);
      sup = sup + slice_string(perm.data[i + 1], ov, strlen(perm.data[i + 1]));
      i = i + 1;
    }
    if (strlen(sup) < strlen(shortest)) {
      shortest = sup;
    }
    idx = idx + 1;
  }
  return shortest;
}

int printCounts(char *seq) {
  int a = 0;
  int c = 0;
  int g = 0;
  int t = 0;
  int i = 0;
  while (i < strlen(seq)) {
    const char *ch = slice_string(seq, i, i + 1);
    if ((strcmp(ch, "A") == 0)) {
      a = a + 1;
    } else {
      if ((strcmp(ch, "C") == 0)) {
        c = c + 1;
      } else {
        if ((strcmp(ch, "G") == 0)) {
          g = g + 1;
        } else {
          if ((strcmp(ch, "T") == 0)) {
            t = t + 1;
          }
        }
      }
    }
    i = i + 1;
  }
  int total = strlen(seq);
  char *tmp22 = concat_string("\nNucleotide counts for ", seq);
  char *tmp23 = concat_string(tmp22, ":\n");
  printf("%s\n", tmp23);
  char *tmp24 = _str(a);
  printf("%s\n", padLeft("A", 10) + padLeft(tmp24, 12));
  char *tmp25 = _str(c);
  printf("%s\n", padLeft("C", 10) + padLeft(tmp25, 12));
  char *tmp26 = _str(g);
  printf("%s\n", padLeft("G", 10) + padLeft(tmp26, 12));
  char *tmp27 = _str(t);
  printf("%s\n", padLeft("T", 10) + padLeft(tmp27, 12));
  char *tmp28 = _str(total - (a + c + g + t));
  printf("%s\n", padLeft("Other", 10) + padLeft(tmp28, 12));
  printf("  ____________________\n");
  char *tmp29 = _str(total);
  printf("%s\n", padLeft("Total length", 14) + padLeft(tmp29, 8));
}

int main() {
  list_string tests = list_string_create(5);
  tests.data[0] = "TA";
  tests.data[1] = "AAG";
  tests.data[2] = "TA";
  tests.data[3] = "GAA";
  tests.data[4] = "TA";
  list_string tests = list_string_create(4);
  tests.data[0] = "CATTAGGG";
  tests.data[1] = "ATTAG";
  tests.data[2] = "GGG";
  tests.data[3] = "TA";
  list_string tests = list_string_create(3);
  tests.data[0] = "AAGAUGGA";
  tests.data[1] = "GGAGCGCAUC";
  tests.data[2] = "AUCGCAAUAAGGA";
  list_string tests = list_string_create(13);
  tests.data[0] = "ATGAAATGGATGTTCTGAGTTGGTCAGTCCCAATGTGCGGGGTTTCTTTTAGTACGTCGG"
                  "GAGTGGTATTAT";
  tests.data[1] = "GGTCGATTCTGAGGACAAAGGTCAAGATGGAGCGCATCGAACGCAATAAGGATCATTTGA"
                  "TGGGACGTTTCGTCGACAAAGT";
  tests.data[2] = "CTATGTTCTTATGAAATGGATGTTCTGAGTTGGTCAGTCCCAATGTGCGGGGTTTCTTTT"
                  "AGTACGTCGGGAGTGGTATTATA";
  tests.data[3] = "TGCTTTCCAATTATGTAAGCGTTCCGAGACGGGGTGGTCGATTCTGAGGACAAAGGTCAA"
                  "GATGGAGCGCATC";
  tests.data[4] = "AACGCAATAAGGATCATTTGATGGGACGTTTCGTCGACAAAGTCTTGTTTCGAGAGTAAC"
                  "GGCTACCGTCTT";
  tests.data[5] = "GCGCATCGAACGCAATAAGGATCATTTGATGGGACGTTTCGTCGACAAAGTCTTGTTTCG"
                  "AGAGTAACGGCTACCGTC";
  tests.data[6] = "CGTTTCGTCGACAAAGTCTTGTTTCGAGAGTAACGGCTACCGTCTTCGATTCTGCTTATA"
                  "ACACTATGTTCT";
  tests.data[7] = "TGCTTTCCAATTATGTAAGCGTTCCGAGACGGGGTGGTCGATTCTGAGGACAAAGGTCAA"
                  "GATGGAGCGCATC";
  tests.data[8] = "CGTAAAAAATTACAACGTCCTTTGGCTATCTCTTAAACTCCTGCTAAATGCTCGTGC";
  tests.data[9] = "GATGGAGCGCATCGAACGCAATAAGGATCATTTGATGGGACGTTTCGTCGACAAAGTCTT"
                  "GTTTCGAGAGTAACGGCTACCGTCTTCGATT";
  tests.data[10] =
      "TTTCCAATTATGTAAGCGTTCCGAGACGGGGTGGTCGATTCTGAGGACAAAGGTCAAGATGGAGCGCATC";
  tests.data[11] = "CTATGTTCTTATGAAATGGATGTTCTGAGTTGGTCAGTCCCAATGTGCGGGGTTTCTTT"
                   "TAGTACGTCGGGAGTGGTATTATA";
  tests.data[12] = "TCTCTTAAACTCCTGCTAAATGCTCGTGCTTTCCAATTATGTAAGCGTTCCGAGACGGG"
                   "GTGGTCGATTCTGAGGACAAAGGTCAAGA";
  list_int tests_data[] = {tests, tests, tests, tests};
  list_list_int tests = {4, tests_data};
  list_int tests = tests;
  for (int tmp30 = 0; tmp30 < tests.len; tmp30++) {
    int seqs = tests.data[tmp30];
    const char *scs = shortestCommonSuperstring(seqs);
    printCounts(scs);
  }
}

int main() {
  main();
  return 0;
}
